syntax = "proto3";
package pb;
option go_package = "./;pb";

// Unário
message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

// Server streaming
message UserResultStream {
    string status = 1;
    User user = 2;
}

// Client streaming
message Users {
    repeated User user = 1;
}

service UserService {
    rpc AddUser (User) returns (User); // Unário
    rpc AddUserVerbose (User) returns (stream UserResultStream); // Server streaming
    rpc AddUsers(stream User) returns (Users); // Client streaming
    rpc AddUserBi (stream User) returns (stream UserResultStream); // Bidirecional
}

// protoc --proto_path=proto proto/*.proto --go_out=pb --go-grpc_out=pb